--- a/styles/global.css
+++ b/styles/global.css
@@ -256,10 +256,23 @@ nav ul li {
 }
 
 #housecall-bar {
-    background-color: white !important;
+    background-color: white;
+    height: 50px;
+    text-align: center;
 }
 
 #housecall-button {
+    border: 2px solid #fff;
+    color: #fff;
+    cursor: pointer;
+    display: inline-block;
+    line-height: 1;
+    margin: 7px 0 0 0;
+    padding: 8px 30px;
+    font-family: Roboto, Arial, Sans-Serif;
+    text-align: center;
+    transition: background-color 300ms ease-out;
+    text-decoration: none;
     background-color: #106cd1 !important;
     border-radius: 12px !important;
     box-shadow: 0 4px 8px rgba(0, 9, 61, 0.24) !important;
