--- a/styles/global.css
+++ b/styles/global.css
@@ -118,6 +118,38 @@ p {
     position: relative;
     /* width: 100%; */
 }
+
+/* .imgWrap {
+    display: block;
+    overflow: hidden;
+    position: absolute;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    box-sizing: border-box;
+    margin: 0;
+}
+.hero-banner-img {
+    position: absolute;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    box-sizing: border-box;
+    padding: 0;
+    border: none;
+    margin: auto;
+    display: block;
+    width: 0;
+    height: 0;
+    min-width: 100%;
+    max-width: 100%;
+    min-height: 100%;
+    max-height: 100%;
+    object-fit: cover;
+} */
+
 .gallery-img {
     height: 100%;
     object-fit: cover;
