--- a/styles/global.css
+++ b/styles/global.css
@@ -83,15 +83,8 @@
 
   .light {
     color-scheme: light;
-    --brand: var(--brand-light);
-    --text1: var(--text1-light);
-    --text2: var(--text2-light);
-    --surface1: var(--surface1-light);
-    --surface2: var(--surface2-light);
-    --surface3: var(--surface3-light);
-    --surface4: var(--surface4-light);
-    --surface-shadow: var(--surface-shadow-light);
-    --shadow-strength: var(--shadow-strength-light);
+    color: theme("colors.blue.900");
+    background-color: theme("colors.white.accent");
   }
 
   .dark {
@@ -112,6 +105,15 @@
   }
 }
 
+@layer utilities {
+  .min-w-screen {
+    min-width: 100vw;
+  }
+  .BgGray200 {
+    background-color: theme("colors.gray.200");
+  }
+}
+
 @layer components {
   .theme {
     @apply text-blue-900 bg-white-accent dark:bg-blue-900 dark:text-white-accent;
@@ -128,6 +130,16 @@
   .theme-surface-inverse {
     @apply dark:bg-white-accent bg-blue-900;
   }
+}
+
+#image-gallery__slider::-webkit-scrollbar-track {
+  background: transparent;
+  background-color: transparent;
+}
+
+#image-gallery__slider::-webkit-scrollbar-thumb {
+  background: transparent;
+  border: none;
 }
 
 ::-webkit-scrollbar {
@@ -156,6 +168,7 @@
 .theme-text--switch {
   @apply text-white-accent dark:dark:text-blue-900;
 }
+
 .rad-shadow {
   box-shadow: 0 2.8px 2.2px
       hsl(var(--surface-shadow) / calc(var(--shadow-strength) + 0.03)),
@@ -561,6 +574,7 @@ p {
 
 .FadeBgWhite {
   background-color: #fcfcfd;
+  color: theme("colors.blue.900") !important;
   transition-property: background-color, border-color, color, fill, stroke;
   transition-timing-function: cubic-bezier(0.4, 0, 1, 1);
   transition-duration: 200ms;
@@ -584,6 +598,22 @@ p {
   transform: scale(1.05);
 }
 
-.bg-readable-contrast {
-  background: linear-gradient(to right, #006aff 40%, #fcfcfd 0%);
+.darkText {
+  color: #001533 !important;
+}
+
+.custom-shape-divider-top-1625525754 {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  overflow: hidden;
+  line-height: 0;
+}
+
+.custom-shape-divider-top-1625525754 svg {
+  position: relative;
+  display: block;
+  width: calc(133% + 1.3px);
+  height: 44px;
 }
